--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Test Page</title>
+  </head>
+  <body>
 <h1>Hey. Big Heading </h1>
-<p>I'm paragraph. </p>
+<p>I'm <b>paragraph.</b> </p>
 <a href="https://google.com" target="_blank" title="Let's go to Google">Google</a>
+<img src="img/cat.png">
+</body>
+</html>
