css uppercase styling

--- a/style-test.html
+++ b/style-test.html
@@ -3,10 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Style Test</title>
+<style type="text/css">
+  h1 {
+    font-size: 30px;
+    color: salmon;
+  }
+  h2 {
+    font-size: 20px;
+    color: maroon;
+  }
+.big {
+  font-size: 60px;
+}
+.uppercase {
+  text-transform: uppercase;
+}
+</style>
+
   </head>
   <body>
-    <h1 style="font-size: 30px; color: #33FF46">Heading 1</h1>
-    <h2>Heading 2</h2>
+    <h1 class="uppercase">Heading 1</h1>
+    <h2>Heading 2 - Maroon</h2>
 
   </body>
 </html>
