linked css-file

--- a/style-test.html
+++ b/style-test.html
@@ -3,26 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Style Test</title>
-<style type="text/css">
-  h1 {
-    font-size: 30px;
-    color: salmon;
-  }
-  h2 {
-    font-size: 20px;
-    color: maroon;
-  }
-.big {
-  font-size: 60px;
-}
-.uppercase {
-  text-transform: uppercase;
-}
-</style>
+<link rel="stylesheet" href="css/test.css">
 
   </head>
   <body>
-    <h1 class="uppercase">Heading 1</h1>
+    <h1 class="big uppercase"><span>Heading 1</span></h1>
     <h2>Heading 2 - Maroon</h2>
 
   </body>
