Ralph Favicon included

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Wreck-it Ralph</title>
+    <link rel="icon" href="img/wreck-it-ralph.jpeg">
   </head>
   <body>
     <!-- header element -->
@@ -26,7 +27,7 @@
 <h2>Ralph's Friends</h2>
 <p>Ralph has some awesome friends. I think the best friend is Link. Click on the links below to read more about them:</p>
 <ul>
-  <li><a href="https://fi.wikipedia.org/wiki/Pac-Man">Pac-Man</a></li>
+  <li><a href="https://fi.wikipedia.org/wiki/Pac-Man" target="_blank">Pac-Man</a></li>
   <li><a href="https://fi.wikipedia.org/wiki/Mario">Mario</a></li>
   <li><a href="https://fi.wikipedia.org/wiki/Pac-Man"></a>Pac-Man</li>
 </ul>
