--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="utf-8">
     <title>Wreck-it Ralph</title>
     <link rel="icon" href="img/wreck-it-ralph.jpeg">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/hero.css"
   </head>
   <body>
     <!-- header element -->
     <header>
       <img src="img/wreck-it-ralph.jpeg" alt="Ralph">
+<h1>Wreck-it-Ralph</h1>
 </header>
 <!-- main element -->
 <main>
 <h2>About Ralph</h2>
 <p>Ralph is awesome. He's an 8-bit videogame bad guy who travels the length ...</p>
 <img src="img/ralph-big.jpg">
-<p>Ralph and his friends</p>
+<p class="caption">Ralph and his friends</p>
 <!-- Characterics -->
 <h2>Ralph's Characterics</h2>
 <ol>
